# debate-buddy

./: .gitignore  .gitmodules  LICENSE  README.md
cpp-monolith/: CMakeLists.txt
cpp-monolith/include/audio/: AudioCapture.h
cpp-monolith/include/interfaces/: IAudioCapture.h
cpp-monolith/src/: main.cpp
cpp-monolith/src/audio/: AudioCapture.cpp
